--- a/JasperServer.ReportClient/ReportClient.csproj
+++ b/JasperServer.ReportClient/ReportClient.csproj
@@ -1,8 +1,6 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
-    <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
-        <RootNamespace>JasperServer.ReportClient</RootNamespace>
-    </PropertyGroup>
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <RootNamespace>JasperServer.ReportClient</RootNamespace>
+  </PropertyGroup>
 </Project>
